Make title links able to go somewhere.

--- a/public/viewer/AusGlobeViewer.css
+++ b/public/viewer/AusGlobeViewer.css
@@ -217,6 +217,14 @@ li {
     font-family: sans-serif;
 }
 
+a.ausglobe-title-menuItem {
+    text-decoration: none;
+}
+
+a.ausglobe-title-menuItem:hover {
+    text-decoration: underline;
+}
+
 .ausglobe-title-menuItem-divider {
     position: relative;
     display: inline;
