--- a/public/viewer/AusGlobeViewer.css
+++ b/public/viewer/AusGlobeViewer.css
@@ -1,4 +1,3 @@
-
 body {
     padding: 0;
     margin: 0;
@@ -15,12 +14,12 @@ body {
     margin: 0;
     overflow: hidden;
     padding: 0;
-    font-family: sans-serif;
+    font-family: "Open Sans" sans-serif;
 }
 
 #product {
     opacity: 0.99;
-    font-family: sans-serif;
+    font-family: "Open Sans" sans-serif;
     font-size: 18pt;
     margin: 10px;
     padding: 0;
@@ -68,7 +67,7 @@ body {
     height: 136px;
     background-color: rgba(0,0,0,0.8);
     color: #eee;
-    font-family: sans-serif;
+    font-family: "Open Sans" sans-serif;
     font-size: 11pt;
 }
 
@@ -96,7 +95,7 @@ body {
     bottom: 25px;
     right: 40px;
     width: auto;
-    font-family: sans-serif;
+    font-family: "Open Sans" sans-serif;
     font-size: 10.5pt;
     color: #fff;
 }
@@ -118,7 +117,7 @@ body {
 
 .dialog {
     display: none;
-    font-family: sans-serif;
+    font-family: "Open Sans" sans-serif;
     font-size: 9.5pt;
     width: 300px;
     opacity: 0.9;
@@ -185,7 +184,8 @@ li {
 
 .ausglobe-title-text {
     display: inline-block;
-    font-family: sans-serif;
+    font-family: "Open Sans" sans-serif;
+    font-weight: 400;
     font-size: 14pt;
     font-weight: bold;
     color: #fff;
@@ -214,7 +214,7 @@ li {
     display: inline;
     color: #9A9A9B;
     font-size: 10pt;
-    font-family: sans-serif;
+    font-family: "Open Sans" sans-serif;
 }
 
 a.ausglobe-title-menuItem {
@@ -230,7 +230,7 @@ a.ausglobe-title-menuItem:hover {
     display: inline;
     color: #9A9A9B;
     font-size: 10pt;
-    font-family: sans-serif;
+    font-family: "Open Sans" sans-serif;
     padding-left: 5px;
     padding-right: 5px;
 }
