Move title bar to bottom and hide extraneous Viewer widgets.

--- a/public/viewer/AusGlobeViewer.css
+++ b/public/viewer/AusGlobeViewer.css
@@ -164,8 +164,8 @@ li {
 }
 
 .ausglobe-title-area {
-    position: relative;
-    top: 0;
+    position: absolute;
+    bottom: 0;
     left: 0;
     width: 100%;
     background-color:#333333;
