--- a/public/viewer/AusGlobeViewer.css
+++ b/public/viewer/AusGlobeViewer.css
@@ -419,7 +419,6 @@ a.ausglobe-title-menuItem:hover {
 }
 
 .ausglobe-accordion-category-item {
-    cursor: pointer;
 }
 
 .ausglobe-accordion-category-item-label {
@@ -429,6 +428,7 @@ a.ausglobe-title-menuItem:hover {
     font-size: 11pt;
     padding-top: 10px;
     padding-bottom: 10px;
+    padding-left: 5px;
 }
 
 .ausglobe-accordion-category-item-enabled {
@@ -439,4 +439,5 @@ a.ausglobe-title-menuItem:hover {
     display: inline-block;
     position: relative;
     top: 4px;
+    cursor: pointer;
 }
