--- a/public/viewer/AusGlobeViewer.css
+++ b/public/viewer/AusGlobeViewer.css
@@ -41,16 +41,36 @@ body {
     width: 80px;
 }
 
-#controls {
+.navigation-controls {
     position: absolute;
-    top: 50px;
-    right: 10px;
+    bottom: 100px;
+    right: 20px;
     
     opacity: 0.95;
     font-size: 9.5pt;
     padding: 0px;
     color: #444;
     width: 30px;
+}
+
+.navigation-control {
+    display: inline-block;
+    position:relative;
+    color: #edffff;  /* For text buttons */
+    fill: #edffff;   /* For SVG buttons */
+    background: #333333;
+    border: 1px solid #555555;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+}
+
+.navigation-control:hover {
+    color: #fff;  /* For text buttons */
+    fill: #fff;   /* For SVG buttons */
+    background: #48b;
+    border-color: #aef;
+    box-shadow: 0 0 8px #fff;
 }
 
 #settings {
