--- a/public/viewer/AusGlobeViewer.css
+++ b/public/viewer/AusGlobeViewer.css
@@ -502,14 +502,15 @@ a.ausglobe-title-menuItem:hover {
 
 .ausglobe-search-form .ausglobe-search-input {
     border: solid 1px #444;
-    background-color: rgba(40, 40, 40, 0.7);
-    color: white;
+    background-color: white;
+    color: black;
     display: inline-block;
     vertical-align: middle;
     width: 250px;
     height: 32px;
     margin: 0;
-    padding: 0 32px 0 0;
+    padding: 5px;
+    padding-right: 32px;
     border-radius: 0;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -521,8 +522,6 @@ a.ausglobe-title-menuItem:hover {
 }
 
 .ausglobe-search-form .ausglobe-search-input:focus {
-    border-color: #ea4;
-    background-color: rgba(15, 15, 15, 0.9);
     box-shadow: none;
     outline: none;
 }
