--- a/public/viewer/AusGlobeViewer.css
+++ b/public/viewer/AusGlobeViewer.css
@@ -199,6 +199,7 @@ li {
     opacity: 0.9;
     border: 1px solid #555555;
     vertical-align: middle;
+    z-index: 999; // required for IE9
 }
 
 .ausglobe-title-area:before {
@@ -278,6 +279,7 @@ a.ausglobe-title-menuItem:hover {
     top: 100px;
     bottom: 80px;
     pointer-events: none;
+    z-index: 999; // required for IE9
 }
 
 .ausglobe-panel-button {
@@ -499,6 +501,7 @@ a.ausglobe-title-menuItem:hover {
     margin: 0 3px;
     top: 50px;
     left: 5px;
+    z-index: 999; // required for IE9
 }
 
 .ausglobe-search-form .ausglobe-search-input {
