--- a/public/viewer/AusGlobeViewer.css
+++ b/public/viewer/AusGlobeViewer.css
@@ -142,6 +142,14 @@ body {
     background-image: url(../images/ajax-loader.gif);
 }
 
+#printScreen {
+    display: block;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: auto;
+    height: auto;
+}
 
 .dialog {
     display: none;
