--- a/public/viewer/AusGlobeViewer.css
+++ b/public/viewer/AusGlobeViewer.css
@@ -15,6 +15,7 @@ body {
     margin: 0;
     overflow: hidden;
     padding: 0;
+    z-index: 999; // required for IE9
 }
 
 #product {
@@ -150,6 +151,7 @@ body {
     left: 0px;
     width: auto;
     height: auto;
+    z-index: 999; // required for IE9
 }
 
 .dialog {
