Make info button work again.
I broke it with some of my IE9 changes.

--- a/public/viewer/AusGlobeViewer.css
+++ b/public/viewer/AusGlobeViewer.css
@@ -567,6 +567,7 @@ a.ausglobe-title-menuItem:hover {
     top: 0;
     bottom: 0;
     background-color: rgba(0,0,0,0.8);
+    z-index: 1000; // required for IE9
 }
 
 .ausglobe-info {
