--- a/public/viewer/AusGlobeViewer.css
+++ b/public/viewer/AusGlobeViewer.css
@@ -175,14 +175,16 @@ li {
     margin-right: -0.25em;
 }
 
-.ausglobe-title-text {
+.ausglobe-title-middle {
     display: inline-block;
+    position: absolute;
     font-weight: 400;
-    font-size: 14pt;
+    font-size: 12px;
     color: #fff;
-    margin-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px
+    right: 350px;
+    bottom: 10px;
+    color: #aaaaaa;
+    vertical-align: bottom;
 }
 
 .ausglobe-title-image {
