--- a/public/viewer/AusGlobeViewer.css
+++ b/public/viewer/AusGlobeViewer.css
@@ -571,6 +571,7 @@ a.ausglobe-title-menuItem:hover {
     bottom: 0;
     right: 0;
     font-family: "Open Sans", sans-serif;
+    overflow: auto;
 }
 
 .ausglobe-info-close-button {
@@ -596,6 +597,10 @@ a.ausglobe-title-menuItem:hover {
     padding-right: 10px;
     padding-bottom: 2px;
     font-weight: bold;
+}
+
+.ausglobe-info h3 {
+    font-size: 9pt;
 }
 
 .ausglobe-info-field {
