--- a/public/viewer/AusGlobeViewer.css
+++ b/public/viewer/AusGlobeViewer.css
@@ -584,11 +584,36 @@ a.ausglobe-title-menuItem:hover {
     font-family: "Open Sans", sans-serif;
 }
 
+.ausglobe-share {
+    display: inline-block;
+    width: 760px;
+    height: 500px;
+    background-color: white;
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    font-family: "Open Sans", sans-serif;
+}
+
+.ausglobe-share-right {
+    position: absolute;
+    top: 0px;
+    left: 280px;
+}
+
+.ausglobe-share-label {
+    padding-top: 15px;
+}
+
 .ausglobe-info-header {
 
 }
 
 .ausglobe-info-content {
+    position: relative;
     overflow: auto;
     height: 435px;
     padding: 15px;
@@ -604,24 +629,24 @@ a.ausglobe-title-menuItem:hover {
     color: #0099CC;
 }
 
-.ausglobe-info h1 {
+.ausglobe-info h1, .ausglobe-share h1 {
     font-size: 16px;
     padding: 15px;
     font-weight: bold;
     margin: 0;
 }
 
-.ausglobe-info h2 {
+.ausglobe-info h2, .ausglobe-share h2 {
     font-size: 10pt;
     font-weight: bold;
     margin: 0;
 }
 
-.ausglobe-info h3 {
+.ausglobe-info h3, .ausglobe-share h3 {
     font-size: 9pt;
 }
 
-.ausglobe-info hr {
+.ausglobe-info hr, .ausglobe-share hr {
     margin-bottom: 20px;
 }
 
