--- a/public/viewer/AusGlobeViewer.css
+++ b/public/viewer/AusGlobeViewer.css
@@ -750,7 +750,7 @@ a.ausglobe-title-menuItem:hover {
     position: relative;
     padding: 10px;
     width: 320px;
-    min-height: 90px;
+    min-height: 100px;
     color: white;
     font-size: 14px;
     font-weight: 300;
@@ -758,7 +758,7 @@ a.ausglobe-title-menuItem:hover {
 
 .ausglobe-button {
     position: absolute;
-    display: block;
+    display: inline-block;
     height: 30px;
     border: 1px solid #555555;
     width: 80px;
@@ -770,11 +770,18 @@ a.ausglobe-title-menuItem:hover {
     line-height: 30px;
     cursor: pointer;
     margin-top: 5px;
-    text-align: center
+    text-align: center;
 }
 
 .ausglobe-wfs-url-input {
     width: 100%;
+}
+
+.ausglobe-addData-type {
+    position: relative;
+    display: inline-block;
+    top: 8px;
+    left: 60px;
 }
 
 .ausglobe-accordion-category-loading {
