Underline enabled data source names on hover.
Also prevent click of a disabled item, even if it was previously enabled.

Fixes #116.

--- a/public/viewer/AusGlobeViewer.css
+++ b/public/viewer/AusGlobeViewer.css
@@ -460,6 +460,10 @@ a.ausglobe-title-menuItem:hover {
     cursor: pointer;
 }
 
+.ausglobe-accordion-category-item-enabled:hover .ausglobe-accordion-category-item-label {
+    text-decoration: underline;
+}
+
 .ausglobe-nowViewing-dragHandle {
     cursor: move;
     position: relative;
