Add border below Now Viewing panel.

--- a/public/css/AusGlobeViewer.css
+++ b/public/css/AusGlobeViewer.css
@@ -373,6 +373,7 @@ a.ausglobe-title-menuItem:hover {
 .ausglobe-now-viewing {
     overflow: auto;
     max-height: 150px;
+    border-bottom: 1px solid gray;
 }
 
 .ausglobe-now-viewing-clear-all {
