--- a/public/css/AusGlobeViewer.css
+++ b/public/css/AusGlobeViewer.css
@@ -725,7 +725,18 @@ a.ausglobe-title-menuItem:hover {
     border-bottom: 1px solid #9A9A9B;
 }
 
+.ausglobe-message-header {
+    border-bottom: 1px solid #9A9A9B;
+}
+
 .ausglobe-info-content {
+    position: relative;
+    overflow: auto;
+    height: 435px;
+    padding: 15px;
+}
+
+.ausglobe-message-content {
     position: relative;
     overflow: auto;
     height: 215px;
@@ -733,6 +744,16 @@ a.ausglobe-title-menuItem:hover {
 }
 
 .ausglobe-info-close-button {
+    position: absolute;
+    right: 10px;
+    top: 4px;
+    cursor: pointer;
+    font-size: 18pt;
+    font-weight: bold;
+    color: #0099CC;
+}
+
+.ausglobe-message-close-button {
     position: absolute;
     right: 10px;
     top: 4px;
