New UI starting to come together...

--- a/src/main.less
+++ b/src/main.less
@@ -23,3 +23,6 @@
 @import "Styles/BrandBar.less";
 @import "Styles/ExplorerPanel.less";
 @import "Styles/SearchPanel.less";
+
+// Tabs on the Explorer Panel
+@import "Styles/DataCatalog.less";
