--- a/src/Views/ExplorerPanel.html
+++ b/src/Views/ExplorerPanel.html
@@ -1,6 +1,6 @@
 <div class="explorer-panel" data-bind="visible: isVisible">
     <div class="explorer-panel-close"></div>
-    <ul class="explorer-panel-tab-area" data-bind="foreach: items">
+    <ul class="explorer-panel-tab-area" data-bind="foreach: tabs">
         <li class="explorer-panel-tab"
             data-bind="text: name,
                        visible: isVisible,
@@ -9,8 +9,8 @@
                        click: activate">
         </li>
     </ul>
-    <!-- ko foreach: items -->
-    <div class="explorer-panel-body" data-bind="visible: isActive, text: name">
+    <!-- ko foreach: tabs -->
+    <div class="explorer-panel-body" data-bind="visible: isActive, embeddedComponent: $data">
     </div>
     <!-- /ko -->
 </div>
