Show Loading/no items messages.

--- a/src/Styles/DataCatalog.less
+++ b/src/Styles/DataCatalog.less
@@ -38,5 +38,9 @@
 }
 
 .data-catalog-indent2 {
-    padding-left: 24px;
+    padding-left: 12px;
+}
+
+.data-catalog-indent3 {
+    padding-left: 12px;
 }
