Add checkboxes and drop-down arrows.

--- a/src/Styles/DataCatalog.less
+++ b/src/Styles/DataCatalog.less
@@ -20,12 +20,14 @@
 }
 
 .data-catalog-item-label {
+    display: inline-block;
     font-size: 16px;
     color: #CCCCCC;
     font-weight: lighter;
 }
 
 .data-catalog-group-label {
+    display: inline-block;
     font-size: 16px;
     color: #CCCCCC;
 }
@@ -43,4 +45,12 @@
 
 .data-catalog-indent3 {
     padding-left: 12px;
+}
+
+.data-catalog-icon {
+    position: relative;
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    fill: #CCCCCC;
 }
