--- a/src/Views/DataCatalogTab.html
+++ b/src/Views/DataCatalogTab.html
@@ -1,15 +1,23 @@
 <script type="text/html" id="data-catalog-item-template">
     <!-- ko if: typeof items === 'undefined' -->
         <div class="data-catalog-member" data-bind="css: 'data-catalog-indent' + ($parents.length - 2)">
-            <div class="data-catalog-icon clickable" data-bind="click: toggleEnabled, cesiumSvgPath: { path: isEnabled ? $root.svgCheckboxChecked : $root.svgCheckboxUnchecked, width: 32, height: 32 }"></div>
-            <div class="data-catalog-item-label" data-bind="text: name"></div>
+            <div clas="data-catalog-member-top-row">
+                <div class="data-catalog-icon-holder">
+                    <div class="data-catalog-icon clickable" data-bind="click: toggleEnabled, cesiumSvgPath: { path: isEnabled ? $root.svgCheckboxChecked : $root.svgCheckboxUnchecked, width: 32, height: 32 }"></div>
+                </div>
+                <div class="data-catalog-item-label" data-bind="text: name"></div>
+            </div>
         </div>
     <!-- /ko -->
 
     <!-- ko if: typeof items !== 'undefined' -->
         <div class="data-catalog-member" data-bind="css: 'data-catalog-indent' + ($parents.length - 2)">
-            <div class="data-catalog-icon clickable" data-bind="click: toggleOpen, cesiumSvgPath: { path: isOpen ? $root.svgArrowDown : $root.svgArrowRight, width: 32, height: 32 }"></div>
-            <div class="data-catalog-group-label clickable" data-bind="click: toggleOpen, text: name"></div>
+            <div clas="data-catalog-member-top-row">
+                <div class="data-catalog-icon-holder">
+                    <div class="data-catalog-icon clickable" data-bind="click: toggleOpen, cesiumSvgPath: { path: isOpen ? $root.svgArrowDown : $root.svgArrowRight, width: 32, height: 32 }"></div>
+                </div>
+                <div class="data-catalog-group-label clickable" data-bind="click: toggleOpen, text: name"></div>
+            </div>
 
             <!-- ko if: isOpen && (isLoading || items.length === 0) -->
                 <div class="data-catalog-group-contents">
