Info buttons, arrows on top-level groups.

--- a/src/Styles/DataCatalog.less
+++ b/src/Styles/DataCatalog.less
@@ -1,12 +1,15 @@
 .data-catalog-top-group-header {
+    display: table;
+    width: 100%;
     line-height: 40px;
-    padding-left: 16px;
     border-bottom: 1px solid @panel-border-color;
     border-top: 1px solid @panel-border-color;
     cursor: pointer;
 }
 
 .data-catalog-top-group-label {
+    display: table-cell;
+    padding-left: 16px;
     font-size: 16px;
     color: #FFFFFF;
 }
@@ -21,6 +24,7 @@
 
 .data-catalog-member-top-row {
     display: table;
+    width: 100%;
 }
 
 .data-catalog-item-label {
@@ -60,6 +64,13 @@
 
 .data-catalog-icon-holder {
     display: table-cell;
+    width: 20px;
+}
+
+.data-catalog-item-info {
+    display: table-cell;
+    text-align: right;
+    width: 20px;
 }
 
 .data-catalog-enabled-item {
