--- a/src/Views/DataCatalogTab.html
+++ b/src/Views/DataCatalogTab.html
@@ -1,18 +1,22 @@
 <script type="text/html" id="data-catalog-item-template">
     <!-- ko if: typeof items === 'undefined' -->
         <div class="data-catalog-member" data-bind="css: 'data-catalog-indent' + ($parents.length - 2)">
-            <div clas="data-catalog-member-top-row">
+            <div class="data-catalog-member-top-row">
                 <div class="data-catalog-icon-holder">
                     <div class="data-catalog-icon clickable" data-bind="click: toggleEnabled, cesiumSvgPath: { path: isEnabled ? $root.svgCheckboxChecked : $root.svgCheckboxUnchecked, width: 32, height: 32 }, css: { 'data-catalog-enabled-item': isEnabled }"></div>
                 </div>
-                <div class="data-catalog-item-label" data-bind="text: name, css: { 'data-catalog-enabled-item': isEnabled }"></div>
+                <div class="data-catalog-item-label data-catalog-enabled-item clickable" data-bind="visible: isEnabled, text: name, click: zoomTo"></div>
+                <div class="data-catalog-item-label" data-bind="visible: !isEnabled, text: name"></div>
+                <div class="data-catalog-item-info">
+                    <div class="data-catalog-icon clickable" data-bind="click: $root.showInfo.bind($root), cesiumSvgPath: { path: $root.svgInfo, width: 32, height: 32 }"></div>
+                </div>
             </div>
         </div>
     <!-- /ko -->
 
     <!-- ko if: typeof items !== 'undefined' -->
         <div class="data-catalog-member" data-bind="css: 'data-catalog-indent' + ($parents.length - 2)">
-            <div clas="data-catalog-member-top-row">
+            <div class="data-catalog-member-top-row">
                 <div class="data-catalog-icon-holder">
                     <div class="data-catalog-icon clickable" data-bind="click: toggleOpen, cesiumSvgPath: { path: isOpen ? $root.svgArrowDown : $root.svgArrowRight, width: 32, height: 32 }"></div>
                 </div>
@@ -38,6 +42,9 @@
 <div class="data-catalog-top-group" data-bind="foreach: catalog.group.items">
     <div class="data-catalog-top-group-header" data-bind="click: toggleOpen">
         <div class="data-catalog-top-group-label" data-bind="text: name"></div>
+        <div class="data-catalog-icon-holder">
+            <div class="data-catalog-icon" data-bind="cesiumSvgPath: { path: isOpen ? $root.svgArrowDown : $root.svgArrowRight, width: 32, height: 32 }"></div>
+        </div>
     </div>
     <!-- ko if: typeof items !== 'undefined' && isOpen -->
         <div class="data-catalog-top-group-contents" data-bind="template: { name: 'data-catalog-item-template', foreach: items }"></div>
